backend/tests/snapshots/golden_tools__code_entity_upsert.snap
---
source: tests/golden_tools.rs
expression: stable
---
{
  "id": "repository:<id9>",
  "kind": "repository",
  "name": "eunomia",
  "aliases": [],
  "summary": "memory layer",
  "vault": "vault:<id2>"
}
