backend/tests/snapshots/golden_tools__consolidate_observations.snap
---
source: tests/golden_tools.rs
expression: stable
---
{
  "consolidated": [],
  "skipped": [],
  "errors": [],
  "note": "Eunomia has no model configured, so nothing was consolidated. Do it yourself: read the entity with `entities_get`, then record the updated belief with `memory_write` (type `observation`)."
}
