backend/tests/snapshots/golden_tools__document_delete.snap
---
source: tests/golden_tools.rs
expression: stable
---
{
  "deleted": true,
  "chunks": 1,
  "memories": 0
}
